<resources>
    <string name="app_name">Секундомер</string>
    <string name="_start_str">Старт</string>
    <string name="_stop_str">Стоп</string>
    <string name="_OK_str">Принять</string>
    <string name="_cancel_str">Отмена</string>
    <string name="_participantNumber">" участников"</string>
    <string name="_participantNumSettings">Количество участников:</string>
    <string name="_settings_str">Настройки</string>
    <string name="Reset_str">Сброс</string>
    <string name="_StaticButtons">Статическое положение кнопок</string>
    <string name="_StaticTrue">Кнопки статичны</string>
    <string name="_StaticFalse">Кнопки динамичны</string>
    <string name="_lapsNum_str">Количество кругов</string>
    <string name="_LapsInfo">" кругов"</string>
    <string name="_ShowInfo">Отображать настройки</string>
    <string name="_fullName">Групповой секундомер</string>
    <string name="_result_str">Результаты</string>
    <string name="_manage_str">Результаты</string>
    <string name="_TimeUntil">Время пробегания круга, сек</string>
    <string name="_eachLap">Круг</string>
    <string name="_replaceAnd">",и,"</string>
    <string name="_replaceNumber">"номер"</string>
    <string name="_accuracy_text">Точность показаний</string>
    <string name="_withoutMilis_text">00:00</string>
    <string name="_tenthMilis_text">00:00.00</string>
    <string name="_runners_str">Номера участников</string>
    <string name="_err_Empty">Введите номера участников</string>
    <string name="_err_Default">Обнаружена ошибка ввода</string>
    <string name="_err_Length">Слишком длинный ID</string>
    <string name="_err_BToff">Bluetooth выключен</string>
    <string name="_participant_str">Участник(↑)</string>
    <string name="_time_str">Время</string>
    <string name="_Confirm_str">Применить</string>
    <string name="title_activity_tabbed_stopwatch">TabbedStopwatch</string>
    <string name="action_settings">Settings</string>
    <string name="_slashLap_str">Формат кнопки</string>
    <string name="_styleText_str">Стиль</string>
    <string name="_style1_str">Стандартный</string>
    <string name="_style2_str">Темный</string>
    <string name="style3_str">Яркий</string>
    <string name="_VolumeButton_text">Запуск таймера по нажатию кнопки увеличения громкости</string>
    <string name="notifytitle">Групповой таймер запущен</string>
    <string name="notifytext">Количество участников: </string>
    <string name="_notifEnable">Уведомление при запуске таймера</string>
    <string name="_SpeechAsk_str">Назовите идентификаторы участников, которые нужно добавить</string>
    <string name="_bluetoothText">Статус передачи:</string>
    <string name="_str_MyPhone">Информация об устройстве:</string>
    <string name="_str_address1">Адрес:</string>
    <string name="_str_Name1">Имя:</string>
    <string name="_str_Check">проверка</string>
    <string name="_str_CheckEnd">готово</string>
    <string name="_slash_1F">10/30</string>
    <string name="_slash_1S">10</string>
    <string name="str_VisualSwitch">Анализ кругов</string>
    <string name="_strSend">Отправить</string>
    <string name="_LengthStadium">Длина стадиона</string>
    <string name="_LengthDist">Длина дистанции</string>
    <string name="_managePicture">Настройки круга</string>
    <string name="_speedDefault">Начальная скорость</string>
    <string name="_meters">м</string>
    <string name="_speedMeter">км/ч</string>
    <string name="_BluetoothDescrip">Подключите дисплей через bluetooth</string>
    <string name="_strParamSettings">Длина круга (стадиона), метры\n\для автоподбора</string>
    <string name="_strOR">или</string>
    <string name="_strInputSpeech">Ввод голосом</string>
    <string name="_inputNum">Ввод номеров</string>
    <string name="_textLengthDistanse">Длина дистанции, метры\n\для автоподбора</string>
    <string name="_strinappropriate">Некорректное значение</string>
    <string name="_strNeedAbove29">Длина не может быть меньше 30м</string>
    <string name="_textTimeWaitAfter">Задержка перед исчезанием кнопки, сек</string>
    <string name="_strNeedLessRun">Введите значение, не превышающее время пробегания круга</string>
    <string name="_str_VisualPicture">Визуализация круга</string>
    <string name="_str_SettingUpcomingText">Формат окна</string>
    <string name="_strDefault">Стандартный</string>
    <string name="_strWithoutUpcoming">Упрощенный</string>
    <string name="_strActivateLeft1">"Осталось использований: "</string>
    <string name="_strActivateLeft2">.</string>
    <string name="_strActivateTitle">Данная версия является демонстрационной. Для активации полной версии введите код:</string>
    <string name="_strActivateFull">Версия приложения: </string>
    <string name="_add_One">Добавить участника</string>
    <string name="_str_left_or_finished">Отображение информации в кнопке</string>
    <string name="_str_finished">Пройдено кругов</string>
    <string name="_str_left">Осталось кругов</string>
</resources>
