<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:background="@color/brickYellow"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/_managePicture"
        android:textSize="18sp" />

    <TableLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="167dp"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/_LengthStadium"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/dialog1"
                android:layout_width="98dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="2"
                android:inputType="number|textEmailAddress" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:text="@string/_meters" />

        </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="167dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/_LengthDist"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/dialog2"
                    android:layout_width="78dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="4dp"
                    android:inputType="number|textEmailAddress" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="0dp"
                    android:text="@string/_meters" />

            </TableRow>

    </TableLayout>
</LinearLayout>