<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Button_Start"
            android:layout_width="99dp"
            android:layout_height="48dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/_start_str"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="5dp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_Reset"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:text="@string/Reset_str"
            tools:layout_editor_absoluteX="115dp"
            tools:layout_editor_absoluteY="5dp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/Button_Manage"
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:text="@string/_manage_str"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="4dp" />

        <ImageButton
            android:id="@+id/button_Settings"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_manage"
            tools:layout_editor_absoluteX="336dp"
            tools:layout_editor_absoluteY="4dp" />
    </TableRow>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Timer"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="115dp" />

    <TextView
        android:id="@+id/text_Timer"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="00:00"
        android:textSize="50sp"
        android:typeface="normal"
        app:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableRow" />

</android.support.constraint.ConstraintLayout>